# surreal-simple-client

./: Cargo.toml  README.md  justfile
src/: errors.rs  lib.rs  message.rs  response.rs  rpc.rs  surreal_client.rs
tests/: Cargo.toml  test_surreal_client.rs
tests/common/: mod.rs  models.rs  open_connection.rs  prepare_data.rs
tests/src/: main.rs
