[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
surreal-simple-client = { path = "../" }
url = "2.3.1"
serde_json = "1.0"
serde = { version = "1.0.144", features = ["derive"] }